# vc-clock

./: CMakeLists.txt  Makefile  PKGBUILD  README.md  installer.sh  shard.yml  vc-clock
src/: main.c  vc-clock.cr
src/lib/: Xlib.cr
